# sub2api_homeassistant

./: .gitignore  README.md  README.zh-CN.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
automations/: sub2api-quota-reset-notification.yaml
custom_components/sub2api/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  sensor.py  strings.json
custom_components/sub2api/translations/: en.json  zh-Hans.json
lovelace/: sub2api-quota-card.yaml
tests/: conftest.py  test_api.py  test_config_flow.py  test_models.py  test_sensor.py
