[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "sub2api-homeassistant"
version = "0.3.0"
description = "Home Assistant custom integration for sub2API quota and token usage"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[project.optional-dependencies]
test = [
  "aioresponses>=0.7.8",
  "bluetooth-data-tools==1.20.0",
  "habluetooth==3.7.0",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-homeassistant-custom-component>=0.13.205",
  "ruff>=0.9"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.setuptools]
packages = []
